# data-maki

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  biome.json  bun.lockb  lefthook.yml  package.json  pyproject.toml  pyptoject.toml  setup.cfg  turbo.json
.github/workflows/: cf.yml  ci.yml
apps/backend/: build.ts  package.json  tsconfig.json  wrangler.toml
apps/backend/src/: index.ts
apps/frontend/: .browserslistrc  .dev.vars  README.md  biome.json  load-context.ts  package.json  panda.config.ts  postcss.config.cjs  tsconfig.json  vite.config.ts  wrangler.toml
apps/frontend/app/: entry.server.tsx  root.tsx
apps/frontend/app/routes/: _index.tsx
apps/frontend/functions/: [[path]].ts
apps/frontend/src/app/: entry.client.tsx  (+3 more)
apps/mock-server/: README.md  index.ts  package.json  tsconfig.json
apps/mock-server/resources/: input.json
apps/mock-server/scripts/: build.ts
apps/mock-server/src/: gen.test.ts  gen.ts  index.ts
apps/solver/: .env.example  README.md  biome.json  bunfig.toml  package.json  tsconfig.json
apps/solver/scripts/: build.ts  hotfix-run.sh  preload.ts
apps/solver/src/: bootstrap.ts  events.ts  index.ts
docs/: spec.typ
examples/: data1.json  data2.json
src/: bench.py
src/data_maki/: __init__.py  constant_numbers.py  context.py  create_answer.py  create_patterns.py  evaluation.py  global_value.py  katanuki.py  patterns.py  solver.py  utils.py
src/data_maki/arrays/: __init__.py
src/data_maki/cli/: __init__.py  client.py  data.py  encoder.py
src/data_maki/models/: answer.py  problem.py  replay.py  result.py
(+58 files in other folders)
