[project]
name = "data-maki"
version = "0.1.0"
description = "Data Maki temporal solver impl"
authors = [
    { name = "GIGAHERTZ00", email = "gigahertz00@gmail.com" },
    { name = "KtaK721" }
]
dependencies = [
    "dataclasses-json>=0.6.7",
    "numpy>=2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
data-maki = "data_maki.cli:main"
bench = "bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=7.1.1",
    "black>=24.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/data_maki"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
